--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -2,9 +2,11 @@ name: CI
 on:
   push:
     branches:
-      - '*'
+      - main
     tags-ignore:
       - 'v*'
+    pull_request:
+
 jobs:
   build:
     name: Build
