--- a/config/crd/bases/tunnel.guardllama.net_tunnels.yaml
+++ b/config/crd/bases/tunnel.guardllama.net_tunnels.yaml
@@ -53,7 +53,7 @@ spec:
             properties:
               dns:
                 properties:
-                  adGuard:
+                  adGuardHome:
                     properties:
                       blockLists:
                         items:
@@ -255,15 +255,23 @@ spec:
                   type: object
                 type: array
               dns:
-                items:
-                  type: string
-                type: array
+                properties:
+                  adGuardHome:
+                    properties:
+                      dns:
+                        items:
+                          type: string
+                        type: array
+                    type: object
+                type: object
               ingressPort:
                 format: int32
                 type: integer
               updatedAt:
                 format: date-time
                 type: string
+            required:
+            - dns
             type: object
         type: object
     served: true
