--- a/config/samples/tunnel_v1_tunnel.yaml
+++ b/config/samples/tunnel_v1_tunnel.yaml
@@ -10,46 +10,29 @@ metadata:
   namespace: 673b7809-71f7-448a-88ce-6a5b92c98be9
 spec:
   dns:
-    adGuard:
+    adGuardHome:
       filteringEnabled: true
-      rules:
-        - '||example.org^'
       blockLists:
-      - enabled: true
-        url: https://adguardteam.github.io/AdGuardSDNSFilter/Filters/filter.txt
+      - url: https://adguardteam.github.io/AdGuardSDNSFilter/Filters/filter.txt
         name: AdGuard DNS filter
-        id: 1
-      - enabled: true
-        url: https://adaway.org/hosts.txt
+      - url: https://adaway.org/hosts.txt
         name: AdAway Default Blocklist
-        id: 2
-      - enabled: true
-        url: https://pgl.yoyo.org/adservers/serverlist.php?hostformat=adblockplus&showintro=1&mimetype=plaintext
+      - url: https://pgl.yoyo.org/adservers/serverlist.php?hostformat=adblockplus&showintro=1&mimetype=plaintext
         name: Peter Lowe's List
-        id: 3
-      - enabled: true
-        url: https://someonewhocares.org/hosts/zero/hosts
+      - url: https://someonewhocares.org/hosts/zero/hosts
         name: Dan Pollock's List
-        id: 4
-      - enabled: true
-        url: https://abp.oisd.nl/basic/
+      - url: https://abp.oisd.nl/basic/
         name: OISD Blocklist Basic
-        id: 5
-      - enabled: true
-        url: https://raw.githubusercontent.com/DandelionSprout/adfilt/master/GameConsoleAdblockList.txt
+      - url: https://raw.githubusercontent.com/DandelionSprout/adfilt/master/GameConsoleAdblockList.txt
         name: Game Console Adblock List
-        id: 6
-      - enabled: true
-        url: https://raw.githubusercontent.com/Perflyst/PiHoleBlocklist/master/SmartTV-AGH.txt
+      - url: https://raw.githubusercontent.com/Perflyst/PiHoleBlocklist/master/SmartTV-AGH.txt
         name: Perflyst and Dandelion Sprout's Smart-TV Blocklist
-        id: 7
   protocol:
     wireGuard:
       interface:
         privateKey:
             value: iDZY0N2xfp6HPld5c9+/Ln2rYU0opQtnjBM1EfUiqGU=
         listenPort: 31820
-        ingressPort: 30010
         address:
           - "10.32.1.1/24"
         postUp: "iptables -t nat -I POSTROUTING 1 -s 10.32.1.0/24 -o eth0 -j MASQUERADE"
